Fix Scrollbar

--- a/SCSS/Modern Dark Theme.scss
+++ b/SCSS/Modern Dark Theme.scss
@@ -1633,15 +1633,18 @@
 					}
 				} 
 		}
-	// Scroller
-		.w-\[calc\(100\%-16px\)\] {
-			width: unset;
-		}
-		
-		::-webkit-scrollbar {
-			background-color: transparent;
-			width: unset;
-		}
+// Scrollbar
+	::-webkit-scrollbar {
+		background-color: transparent;
+		width: 8px;
+	}
+	::-webkit-scrollbar-track {
+		background-color: transparent;
+	}
+	::-webkit-scrollbar-thumb {
+		background-color: #BBB;
+		border: 4px solid transparent;
+	}
 // Hover Effect
 	// Slash Command
 		.dark-mode {
